--- a/src/app/components/parts/main-mappings-available-attributes/main-mappings-available-attributes.component.html
+++ b/src/app/components/parts/main-mappings-available-attributes/main-mappings-available-attributes.component.html
@@ -24,13 +24,13 @@
               </button>
               <div aria-labelledby="cDetailsGroup" class="dropdown-menu">
                 <a *ngFor="let cDetail of attribute.mapPointerC; let i = index;"
-                   [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, (typeHint.ec ? 'ec' : 'nc') + attribute.mapPointerC[i]]} }]"
+                   [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, attribute.mapPointerC[i]]} }]"
                    class="dropdown-item">
                   <span *ngIf="typeHint.ec then ecBlock else ncBlock"></span>
                   <ng-template
-                    #ecBlock>{{ dataService.networkSelected.mappings.edgesContinuous[i].title[0] }}</ng-template>
+                    #ecBlock>{{ dataService.networkSelected.mappings.edgesContinuous[i].cleanStyleProperty }}</ng-template>
                   <ng-template
-                    #ncBlock>{{ dataService.networkSelected.mappings.nodesContinuous[i].title[0] }}</ng-template>
+                    #ncBlock>{{ dataService.networkSelected.mappings.nodesContinuous[i].cleanStyleProperty }}</ng-template>
                 </a>
               </div>
             </div>
@@ -40,7 +40,7 @@
           <!-- exactly one mapping exists -->
           <span *ngIf="attribute.mapPointerC.length === 1">
                   <button *ngIf="attribute.mapPointerC.length > 0"
-                          [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, (typeHint.ec ? 'ec' : 'nc') + attribute.mapPointerC[0]]} }]"
+                          [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, attribute.mapPointerC[0]]} }]"
                           class="btn btn-outline-secondary"
                           data-toggle="tooltip"
                           ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"
@@ -70,7 +70,7 @@
                 </button>
                 <div aria-labelledby="dDetailsGroup" class="dropdown-menu">
                   <a *ngFor="let dDetail of attribute.mapPointerD; let i = index;"
-                     [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, (typeHint.ed ? 'ed' : 'nd') + attribute.mapPointerD[i]]} }]"
+                     [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, attribute.mapPointerD[i]]} }]"
                      class="dropdown-item">
                     <span *ngIf="typeHint.ed then edBlock else ndBlock"></span>
                     <ng-template #edBlock>
@@ -87,7 +87,7 @@
 
           <span *ngIf="attribute.mapPointerD.length === 1">
             <button *ngIf="attribute.mapPointerD.length > 0"
-                    [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, (typeHint.ed ? 'ed' : 'nd') + attribute.mapPointerD[0]]} }]"
+                    [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, attribute.mapPointerD[0]]} }]"
                     class="btn btn-outline-secondary"
                     data-toggle="tooltip"
                     ngbTooltip="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}" placement="bottom"
