[FIX] consolidated naming for discrete and continuous mappings, to avoid confusion, all is called COL now

--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -136,7 +136,7 @@
               <a
                 [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, 'nd' + index]} }]"
                 role="button">
-                <b>{{nodeMap.classifier}}</b>
+                <b>{{nodeMap.col}}</b>
               </a>
             </td>
             <td>
@@ -203,7 +203,7 @@
               <a
                 [routerLink]="['', { outlets: {primary: ['mappings', dataService.networkSelected.id, 'ed' + index]} }]"
                 role="button">
-                <b>{{edgeMap.classifier}}</b>
+                <b>{{edgeMap.col}}</b>
               </a>
             </td>
             <td>
