[FIX] ahead of time instead of lazy loading translations, also histograms in stats component now have axis labels

--- a/src/app/components/parts/alert-mapping-already-exists/alert-mapping-already-exists.component.html
+++ b/src/app/components/parts/alert-mapping-already-exists/alert-mapping-already-exists.component.html
@@ -1,3 +1,6 @@
+<div class="bg-danger">WARNING</div>
+
+
 <ng-container *ngIf="isDiscrete then discreteBlock else continuousBlock"></ng-container>
 
 <ng-template #discreteBlock>
